--- a/MVC-Object_C/Base.lproj/Main.storyboard
+++ b/MVC-Object_C/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="PLK-b4-beB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="PLK-b4-beB">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -14,7 +14,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="WHY-qX-5wX"/>
+                        <segue destination="RuT-2P-7cv" kind="relationship" relationship="rootViewController" id="mkn-JE-3BI"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JMY-7N-r9O" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -38,7 +38,26 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="198" y="332"/>
+            <point key="canvasLocation" x="336" y="184"/>
+        </scene>
+        <!--CollectViewController-->
+        <scene sceneID="FRG-uF-adY">
+            <objects>
+                <viewController id="RuT-2P-7cv" customClass="CollectViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bC0-MQ-yuh"/>
+                        <viewControllerLayoutGuide type="bottom" id="I0R-A8-w29"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="mzf-xz-rre">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="CollectViewController" id="zxf-gg-iRX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xsD-Qb-Gur" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="336" y="919"/>
         </scene>
     </scenes>
 </document>
